name:              podly-server-hs
version:           0.0.1
license:           AllRightsReserved
license-file:      LICENSE
author:            Bennett Hoffman
maintainer:        Bennett Hoffman
synopsis:          podly.co
description:       Something clever.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://podly-server-hs.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Yesod.Angular
                     Text.Coffee.Bare
                     Handler.Util
                     Handler.Home
                     Handler.Test
                     -- Handler.Node
                     Handler.Episode
                     Util.TH
                     Podly.Auth
                     Podly.Affiliate
                     Podly.Middleware.Crossdomain
                     Podly.Middleware.Mobile
                     Podly.Facebook.OpenGraph
                     Podly.Facebook.OpenGraph.Entities
                     Podly.Urls
                     -- Handler.NodeInstance
                     Handler.NodeType
                     -- Fixtures
                     Document

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveGeneric
                TypeSynonymInstances
                FlexibleInstances

    build-depends: base                          >= 4          && < 5
                 -- , yesod-platform                >= 1.1        && < 1.2
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-default
                 , yesod-form
                 , yesod-test
                 , yesod-json                    >= 1.1        && < 1.2
                 , clientsession
                 , bytestring == 0.9.2.1
                 , text == 0.11.2.3
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-postgresql == 1.0.3
                 , template-haskell == 2.7.0.0
                 , hamlet == 1.1.6.3
                 , shakespeare == 1.0.3.1
                 , shakespeare-css
                 , shakespeare-js
                 , shakespeare-text
                 , filepath                      >= 1.3        && < 1.4
                 , hjsmin == 0.1.4.1
                 , monad-control == 0.3.1.4
                 , wai-extra == 1.3.2.4
                 , yaml == 0.8.2.1
                 , http-conduit                  >= 1.5        && < 1.7
                 , directory                     >= 1.1        && < 1.3
                 , containers                    >= 0.4.2      && < 0.5
                 , transformers                  >= 0.3        && < 0.4
                 , warp == 1.3.7.4
                 , time == 1.4
                 , aeson == 0.6.1.0
                 , http-types == 0.7.3.0.1
                 , attoparsec == 0.10.2.0
                 , old-locale == 1.0.0.4
                 , mtl == 2.1.2
                 , wai == 1.4.0
                 , network == 2.3.1.0
                 , MissingH == 1.2.0.0
                 , resourcet == 0.4.4
                 , monad-logger == 0.2.4
                 , regex-posix == 0.95.2
                 , regex-pcre-builtin == 0.94.4.5.8.31
                 , unordered-containers == 0.2.3.0
                 , blaze-markup == 0.5.1.4
                 , blaze-html >= 0.5.1 && < 0.5.2
                 -- , yesod-fay                     >= 0.1
                 -- , fay                           >= 0.9
                 , aeson                         >= 0.6        && < 0.7
                 , vector                        >= 0.10       && < 0.11
                 , conduit  == 0.5.6
                 , ghc-prim == 0.2.0.0
                 , data-default == 0.5.0
                 , process == 1.1.0.1

executable         podly-server-hs
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , podly-server-hs
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , podly-server-hs
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-mongoDB     >= 1.0        && < 1.1
