name:              podly-server-hs
version:           0.0.2
license:           AllRightsReserved
license-file:      LICENSE
author:            Bennett Hoffman
maintainer:        Bennett Hoffman
synopsis:          podly.co
description:       Something clever.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://podly-server-hs.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Yesod.Angular
                     Text.Coffee.Bare
                     Handler.Util
                     Handler.Home
                     Handler.Test
                     -- Handler.Node
                     Handler.Episode
                     Util.TH
                     Podly.Auth
                     Podly.Affiliate
                     Podly.Middleware.Crossdomain
                     Podly.Middleware.Mobile
                     Podly.Facebook.OpenGraph
                     Podly.Facebook.OpenGraph.Entities
                     Podly.Urls
                     -- Handler.NodeInstance
                     Handler.NodeType
                     -- Fixtures
                     Document

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveGeneric
                TypeSynonymInstances
                FlexibleInstances

    build-depends: base                          >= 4          && < 5
                    ,    template-haskell
                    ,    MissingH == 1.2.0.0
                    ,    ReadArgs == 1.2.1
                    ,    SHA == 1.6.1
                    ,    aeson == 0.6.1.0
                    ,    ansi-terminal == 0.6
                    ,    asn1-data == 0.7.1
                    ,    attoparsec == 0.10.4.0
                    ,    attoparsec-conduit == 0.5.0.3
                    ,    base-unicode-symbols == 0.2.2.4
                    ,    base64-bytestring == 1.0.0.1
                    ,    base64-conduit == 0.5.1
                    ,    basic-prelude == 0.3.2.0
                    ,    blaze-builder == 0.3.1.0
                    ,    blaze-builder-conduit == 0.5.0.3
                    ,    blaze-html == 0.5.1.3
                    ,    blaze-markup == 0.5.1.4
                    ,    blaze-textual == 0.2.0.8
                    ,    byteorder == 1.0.3
                    ,    bytestring == 0.9.2.1
                    ,    case-insensitive == 0.4.0.4
                    ,    cereal == 0.3.5.2
                    ,    certificate == 1.2.8
                    ,    cipher-aes == 0.1.7
                    ,    classy-prelude == 0.5.1
                    ,    conduit == 0.5.6
                    ,    containers == 0.4.2.1
                    ,    cookie == 0.4.0.1
                    ,    cprng-aes == 0.2.5
                    ,    cpu == 0.1.1
                    ,    crypto-api == 0.10.2
                    ,    crypto-conduit == 0.4.3
                    ,    crypto-pubkey-types == 0.1.1
                    ,    cryptocipher == 0.3.5
                    ,    cryptohash == 0.8.3
                    ,    css-text == 0.1.1
                    ,    data-default == 0.5.0
                    ,    date-cache == 0.3.0
                    ,    dlist == 0.5
                    ,    email-validate == 1.0.0
                    ,    entropy == 0.2.1
                    ,    failure == 0.2.0.1
                    ,    fast-logger == 0.3.1
                    ,    file-embed == 0.0.4.7
                    ,    filepath == 1.3.0.0
                    ,    filesystem-conduit == 0.5.0.2
                    ,    fsnotify == 0.0.6
                    ,    ghc-paths == 0.1.0.9
                    ,    hamlet == 1.1.6.3
                    ,    hashable == 1.2.0.5
                    ,    hjsmin == 0.1.4.1
                    ,    hslogger == 1.2.1
                    ,    hspec == 1.4.4
                    ,    hspec-expectations == 0.3.0.3
                    ,    html-conduit == 0.1.0.4
                    ,    http-date == 0.0.4
                    ,    http-reverse-proxy == 0.1.1.3
                    ,    http-types == 0.7.3.0.1
                    ,    language-javascript == 0.5.7
                    ,    largeword == 1.0.4
                    ,    lifted-base == 0.2.0.2
                    ,    mime-mail == 0.4.1.2
                    ,    mime-types == 0.1.0.3
                    ,    monad-control == 0.3.1.4
                    ,    monad-logger == 0.2.4
                    ,    nats == 0.1
                    ,    network == 2.3.1.0
                    ,    network-conduit == 0.6.2.2
                    ,    old-locale == 1.0.0.4
                    ,    optparse-applicative == 0.5.2.1
                    ,    path-pieces == 0.1.2
                    ,    pem == 0.1.2
                    ,    persistent == 1.0.2.2
                    ,    persistent-postgresql == 1.0.3
                    ,    persistent-template == 1.0.0.2
                    ,    pool-conduit == 0.1.1
                    ,    postgresql-libpq == 0.8.2.2
                    ,    postgresql-simple == 0.2.4.1
                    ,    project-template == 0.1.3
                    ,    pureMD5 == 2.1.2.1
                    ,    pwstore-fast == 2.3
                    ,    regex-pcre-builtin == 0.94.4.5.8.31
                    ,    resource-pool == 0.2.1.1
                    ,    resourcet == 0.4.4
                    ,    safe == 0.3.3
                    ,    semigroups == 0.9
                    ,    setenv == 0.1.0
                    ,    shakespeare == 1.0.3.1
                    ,    shakespeare-css == 1.0.3
                    ,    shakespeare-i18n == 1.0.0.2
                    ,    shakespeare-js == 1.1.2
                    ,    shakespeare-text == 1.0.0.5
                    ,    silently == 1.2.4.1
                    ,    simple-sendfile == 0.2.11
                    ,    skein == 0.1.0.12
                    ,    socks == 0.4.2
                    ,    stringsearch == 0.3.6.4
                    ,    system-fileio == 0.3.11
                    ,    system-filepath == 0.4.7
                    ,    tagged == 0.4.4
                    ,    tagsoup == 0.12.8
                    ,    tagstream-conduit == 0.5.4
                    ,    tar == 0.4.0.1
                    ,    tls == 0.9.11
                    ,    tls-extra == 0.4.7.1
                    ,    transformers-base == 0.4.1
                    ,    unix-compat == 0.4.1.0
                    ,    unix-time == 0.1.5
                    ,    unordered-containers == 0.2.3.0
                    ,    utf8-light == 0.4.0.1
                    ,    utf8-string == 0.3.7
                    ,    vault == 0.2.0.4
                    ,    vector == 0.10.0.1
                    ,    void == 0.5.11
                    ,    wai == 1.4.0
                    ,    wai-app-static == 1.3.1.2
                    ,    wai-extra == 1.3.2.4
                    ,    wai-logger == 0.3.0
                    ,    wai-test == 1.3.0.4
                    ,    warp == 1.3.7.4
                    ,    word8 == 0.0.3
                    ,    xml-conduit == 1.0.3.3
                    ,    xml-types == 0.3.3
                    ,    xss-sanitize == 0.3.3
                    ,    yaml == 0.8.2.1
                    ,    yesod-routes == 1.1.2
                    ,    yesod-test == 0.3.3.2
                    ,    zlib-bindings == 0.1.1.3
                    ,    zlib-conduit == 0.5.0.3
                    ,    http-conduit == 1.6.1.2
                    ,    yesod-default == 1.1.3.2
                    ,    authenticate == 1.3.2.6
                    ,    yesod == 1.1.9
                    ,    yesod-core == 1.1.8.2
                    ,    yesod-json == 1.1.2.1
                    ,    yesod-persistent == 1.1.0.1
                    ,    yesod-form == 1.2.1.3
                    ,    yesod-auth == 1.1.5.3
                    ,    yesod-static == 1.1.2.2
                    ,    text == 0.11.2.3
                    ,    clientsession == 0.8.1
                    ,    ghc-prim
                    ,    transformers == 0.3.0.0
                    ,    time == 1.4

executable         podly-server-hs
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , podly-server-hs
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , podly-server-hs
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-mongoDB     >= 1.0        && < 1.1
