name:              podly-server-hs
version:           0.0.2
license:           AllRightsReserved
license-file:      LICENSE
author:            Bennett Hoffman
maintainer:        Bennett Hoffman
synopsis:          podly.co
description:       Something clever.
category:          Web
stability:         Experimental
cabal-version:     >= 1.8
build-type:        Simple
homepage:          http://podly-server-hs.yesodweb.com/

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    exposed-modules: Application
                     Foundation
                     Import
                     Model
                     Settings
                     Settings.StaticFiles
                     Settings.Development
                     Yesod.Angular
                     Text.Coffee.Bare
                     Handler.Util
                     Handler.Home
                     Handler.Test
                     -- Handler.Node
                     Handler.Episode
                     Util.TH
                     Podly.Auth
                     Podly.Affiliate
                     Podly.Middleware.Crossdomain
                     Podly.Middleware.Mobile
                     Podly.Facebook.OpenGraph
                     Podly.Facebook.OpenGraph.Entities
                     Podly.Urls
                     -- Handler.NodeInstance
                     Handler.NodeType
                     -- Fixtures
                     Document

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -O0
    else
        ghc-options:   -Wall -O2

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                NoImplicitPrelude
                CPP
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                GeneralizedNewtypeDeriving
                FlexibleContexts
                EmptyDataDecls
                NoMonomorphismRestriction
                DeriveGeneric
                TypeSynonymInstances
                FlexibleInstances

    build-depends: base                          >= 4          && < 5
                 , yesod                         >= 1.1.5      && < 1.2
                 , yesod-core                    >= 1.1.7      && < 1.2
                 , yesod-auth                    >= 1.1        && < 1.2
                 , yesod-static                  >= 1.1        && < 1.2
                 , yesod-default                 >= 1.1        && < 1.2
                 , yesod-form                    >= 1.1        && < 1.3
                 -- , yesod-test
                 , yesod-json                    >= 1.1        && < 1.2
                 , clientsession                 >= 0.8        && < 0.9
                 , bytestring                    >= 0.9        && < 0.11
                 , text                          >= 0.11       && < 0.12
                 , persistent                    >= 1.1.5      && < 1.2
                 , persistent-postgresql         >= 1.1        && < 1.2
                 , persistent-template           >= 1.1.2      && < 1.2
                 , template-haskell
                 , hamlet                        >= 1.1        && < 1.2
                 , shakespeare                   >= 1.0.2      && < 1.2
                 , shakespeare-css               >= 1.0        && < 1.1
                 , shakespeare-js                >= 1.0.2      && < 1.2
                 , shakespeare-text              >= 1.0        && < 1.1
                 , filepath                      >= 1.3        && < 1.4
                 , hjsmin                        >= 0.1        && < 0.2
                 , monad-control                 >= 0.3        && < 0.4
                 , wai-extra                     >= 1.3        && < 1.4
                 , yaml                          >= 0.8        && < 0.9
                 , http-conduit                  == 1.9.0
                 , directory                     >= 1.1        && < 1.3
                 , warp                          >= 1.3        && < 1.4
                 , containers                    >= 0.4.2      && < 0.5
                 , transformers                  >= 0.3        && < 0.4
                 , monad-logger                  >= 0.3
                 , fast-logger                   >= 0.3
                 , time
                 , aeson
                 , http-types
                 , attoparsec
                 , old-locale
                 , mtl
                 , wai                          >= 1.4         && < 1.5
                 , network
                 , MissingH
                 , resourcet
                 , monad-logger
                 , regex-posix
                 , regex-pcre-builtin
                 , unordered-containers
                 , blaze-markup
                 , blaze-html
                 -- , yesod-fay                     >= 0.1
                 -- , fay                           >= 0.9
                 , aeson
                 , vector                        >= 0.10       && < 0.11
                 , conduit                       >= 1.0
                 , ghc-prim
                 , data-default
                 , process
                 , xml-conduit                   >= 1.1        && < 1.2

executable         podly-server-hs
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base
                     , podly-server-hs
                     , yesod-default

    ghc-options:       -threaded -O2

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           main.hs
    hs-source-dirs:    tests
    ghc-options:       -Wall

    build-depends: base
                 , podly-server-hs
                 , yesod-test
                 , yesod-default
                 , yesod-core
                 , persistent                    >= 1.0        && < 1.1
                 , persistent-mongoDB     >= 1.0        && < 1.1
